--- a/index.html
+++ b/index.html
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belajar Software Engineering | D1</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <title>To-Do App</title>
 </head>
-<body>
-    <h1> Hello World !!</h1>
+<body class="bg-gradient-to-br from-slate-50 to-gray-100 min-h-screen p-4 sm:p-6">
+    <div class="max-w-4xl mx-auto bg-gradient-to-br from-white to-slate-50 p-4 sm:p-6 md:p-8 rounded-2xl shadow-2xl transform transition-all duration-300 hover:shadow-3xl border border-slate-200">
+        <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6 md:mb-8 text-center bg-gradient-to-r from-slate-600 to-gray-800 bg-clip-text text-transparent animate-pulse">To-Do List</h1>
+        <form id="todo-form" class="mb-6 md:mb-8 space-y-4 md:space-y-6">
+            <input type="text" id="todo-input" placeholder="Enter a to-do item" class="w-full p-3 md:p-4 border border-slate-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-slate-500 focus:border-transparent transition duration-300 shadow-sm text-sm md:text-base" required>
+            <input type="date" id="date-input" class="w-full p-3 md:p-4 border border-slate-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-slate-500 focus:border-transparent transition duration-300 shadow-sm text-sm md:text-base" required>
+            <button type="button" id="add-btn" class="w-full bg-gradient-to-r from-slate-600 to-gray-700 hover:from-slate-700 hover:to-gray-800 text-white p-3 md:p-4 rounded-xl font-semibold transform hover:scale-105 transition duration-300 shadow-lg text-sm md:text-base">Add To-Do</button>
+        </form>
+        <div class="mb-6 md:mb-8">
+            <label for="filter-select" class="block mb-2 md:mb-3 font-semibold text-slate-700 text-base md:text-lg">Filter:</label>
+            <select id="filter-select" class="w-full p-3 md:p-4 border border-slate-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-slate-500 focus:border-transparent transition duration-300 shadow-sm text-sm md:text-base">
+                <option value="all">All</option>
+                <option value="pending">Pending</option>
+                <option value="completed">Completed</option>
+            </select>
+        </div>
+        <div class="overflow-x-auto">
+            <table id="todo-table" class="w-full border-collapse border border-slate-300 rounded-xl overflow-hidden shadow-lg min-w-full">
+                <thead>
+                    <tr class="bg-gradient-to-r from-slate-100 to-gray-100">
+                        <th class="border border-slate-300 p-3 md:p-5 text-left font-semibold text-slate-700 text-sm md:text-lg">To-Do</th>
+                        <th class="border border-slate-300 p-3 md:p-5 text-left font-semibold text-slate-700 text-sm md:text-lg">Due Date</th>
+                        <th class="border border-slate-300 p-3 md:p-5 text-left font-semibold text-slate-700 text-sm md:text-lg">Status</th>
+                        <th class="border border-slate-300 p-3 md:p-5 text-left font-semibold text-slate-700 text-sm md:text-lg">Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="todo-list" class="animate-fade-in">
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div id="delete-modal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
+        <div class="bg-white rounded-2xl p-6 md:p-8 max-w-md mx-4 shadow-2xl transform transition-all duration-300 scale-95 opacity-0" id="modal-content">
+            <div class="text-center">
+                <div class="mx-auto flex items-center justify-center h-16 w-16 rounded-full bg-red-100 mb-4">
+                    <svg class="h-8 w-8 text-red-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L4.082 16.5c-.77.833.192 2.5 1.732 2.5z" />
+                    </svg>
+                </div>
+                <h3 class="text-lg md:text-xl font-semibold text-gray-900 mb-2">Delete To-Do Item</h3>
+                <p class="text-sm md:text-base text-gray-600 mb-6">Are you sure you want to delete this to-do item? This action cannot be undone.</p>
+                <div class="flex flex-col sm:flex-row gap-3 justify-center">
+                    <button id="cancel-delete" class="px-4 py-2 bg-gray-200 hover:bg-gray-300 text-gray-800 rounded-lg transition duration-200 font-medium">Cancel</button>
+                    <button id="confirm-delete" class="px-4 py-2 bg-red-600 hover:bg-red-700 text-white rounded-lg transition duration-200 font-medium">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
