--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gradient-to-br from-slate-50 to-gray-100 min-h-screen p-4 sm:p-6">
     <div class="max-w-4xl mx-auto bg-gradient-to-br from-white to-slate-50 p-4 sm:p-6 md:p-8 rounded-2xl shadow-2xl transform transition-all duration-300 hover:shadow-3xl border border-slate-200">
-        <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6 md:mb-8 text-center bg-gradient-to-r from-slate-600 to-gray-800 bg-clip-text text-transparent animate-pulse">To-Do List</h1>
+        <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-6 md:mb-8 text-center bg-gradient-to-r from-slate-600 to-gray-800 bg-clip-text text-transparent">To-Do List</h1>
         <form id="todo-form" class="mb-6 md:mb-8 space-y-4 md:space-y-6">
             <input type="text" id="todo-input" placeholder="Enter a to-do item" class="w-full p-3 md:p-4 border border-slate-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-slate-500 focus:border-transparent transition duration-300 shadow-sm text-sm md:text-base" required>
             <div class="relative">
